@startuml

title __BUFFS's Class Diagram__\n

  namespace gamesource {
    namespace battleState.utils.buffs {
      class gamesource.battleState.utils.buffs.Buff {
          - buffPicture : Picture
          - description : String
          - name : String
          + Buff()
          {static} + createBuff()
          + getBuffPicture()
          + getDescription()
          + getFunc()
          + getName()
          + getRole()
          + triggerFunc()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.utils.buffs {
      interface gamesource.battleState.utils.buffs.BuffFunction {
          {abstract} + getFunc()
          {abstract} + triggerFunc()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.utils.buffs {
      class gamesource.battleState.utils.buffs.ForeverBuff {
          - times : int
          + ForeverBuff()
          + ForeverBuff()
          + decTimes()
          + getTimes()
          + incTimes()
          + setTimes()
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.utils.buffs {
      class gamesource.battleState.utils.buffs.LimitBuff {
          - duration : int
          + LimitBuff()
          + clearDuration()
          + decDuration()
          + getDuration()
          + incDuration()
          + setDuration()
      }
    }
  }
  

  gamesource.battleState.utils.buffs.Buff o-- gamesource.battleState.character.Role : role
  gamesource.battleState.utils.buffs.ForeverBuff -up-|> gamesource.battleState.utils.buffs.Buff
  gamesource.battleState.utils.buffs.LimitBuff -up-|> gamesource.battleState.utils.buffs.Buff




@enduml
